--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="/index.html">
+            <a href="index.html">
                 <span class="logo-texto">
                     CodoMovies
                 </span>
