--- a/signin.html
+++ b/signin.html
@@ -17,7 +17,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="/">
+            <a href="index.html">
                 <span class="logo-texto">
                     CodoMovies
                 </span>
