--- a/detail-movie.html
+++ b/detail-movie.html
@@ -18,9 +18,9 @@
     <header class="header">
         <nav>
             <div id="logo">
-                <a href="/">
+                <a href="index.html">
                     <span class="logo-text">
-                        CAC - Movies
+                        CodoMovies
                     </span>
                 </a>
             </div>            
